Bug fixes, small additions